resources/sass/app.scss
// Fonts
@import url('https://fonts.googleapis.com/css?family=Nunito');

// Variables
@import 'variables';

@import "bulma";

@font-face {
  font-family: 'Diablo Heavy';
  font-style: normal;
  font-weight: normal;
  src: local('Diablo Heavy'), url('diablo.woff') format('woff');
}

@import url('https://fonts.googleapis.com/css?family=Roboto:400,500');

html,
body{
  font-family: 'Roboto', sans-serif;
  // height:100%;
  // background-color: #333333;
  // color: #706850;
}

#app {
	height:100%;
}

.has-vertically-centered-content {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 100%;
}

